<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".controllers.activities.EditAccountActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:id="@+id/edit_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_account_label_title_my_account"
                android:textSize="30dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:background="@android:color/black"
                android:padding="8dp"
        />
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent">

                <ImageView
                        android:id="@+id/image_edit_perfil"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:src="@drawable/ic_account_circle_black_24dp"
                        android:layout_margin="30dp"
                />

                <TextView
                        android:id="@+id/text_edit_label_fullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/image_edit_perfil"
                        android:text="@string/account_label_full_name"
                        android:textSize="23dp"
                        android:textStyle="bold"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginTop="10dp"
                />

                <EditText
                        android:id="@+id/text_edit_fullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/text_edit_label_fullname"
                        android:text="Your name"
                        android:textSize="20dp"
                        android:textStyle="italic"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:inputType="text"
                />

                <TextView
                        android:id="@+id/text_edit_error_fullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/text_edit_fullname"
                        android:text=""
                        android:textSize="15dp"
                        android:textColor="@color/colorError"
                        android:textStyle="italic"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:inputType="text"
                />

                <TextView
                        android:id="@+id/text_edit_label_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/text_edit_error_fullname"
                        android:text="@string/account_label_username"
                        android:textSize="23dp"
                        android:textStyle="bold"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginTop="10dp"
                />

                <EditText
                        android:id="@+id/text_edit_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/text_edit_label_username"
                        android:text="Your user name"
                        android:textSize="20dp"
                        android:textStyle="italic"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:inputType="text"
                />

                <TextView
                        android:id="@+id/text_edit_error_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/text_edit_username"
                        android:text=""
                        android:textSize="15dp"
                        android:textColor="@color/colorError"
                        android:textStyle="italic"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:inputType="text"
                />

                <TextView
                        android:id="@+id/text_edit_label_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/text_edit_error_username"
                        android:text="@string/account_label_email"
                        android:textSize="23dp"
                        android:textStyle="bold"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginTop="15dp"
                />

                <EditText
                        android:id="@+id/text_edit_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/text_edit_label_email"
                        android:text="Your email"
                        android:textSize="20dp"
                        android:textStyle="italic"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:inputType="textEmailAddress"
                />

                <TextView
                        android:id="@+id/text_edit_error_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/text_edit_email"
                        android:text=""
                        android:textSize="15dp"
                        android:textColor="@color/colorError"
                        android:textStyle="italic"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:inputType="text"
                />

                <TextView
                        android:id="@+id/text_edit_label_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/text_edit_error_email"
                        android:text="@string/account_label_password"
                        android:textSize="23dp"
                        android:textStyle="bold"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginTop="15dp"
                />

                <EditText
                        android:id="@+id/text_edit_password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/text_edit_label_password"
                        android:text="Your Password"
                        android:textSize="20dp"
                        android:textStyle="italic"
                        android:layout_marginStart="25dp"
                        app:layout_constraintEnd_toStartOf="@id/image_edit_visibilitypassword"
                        app:layout_constraintStart_toStartOf="parent"
                        android:inputType="textPassword"
                />

                <ImageView
                        android:id="@+id/image_edit_visibilitypassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/text_edit_label_password"
                        android:src="@drawable/ic_visibility_black_24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="25dp"
                />

                <TextView
                        android:id="@+id/text_edit_error_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/text_edit_password"
                        android:text=""
                        android:textSize="15dp"
                        android:textColor="@color/colorError"
                        android:textStyle="italic"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:inputType="text"
                />

                <TextView
                        android:id="@+id/text_edit_label_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/text_edit_error_password"
                        android:text="@string/account_label_gender"
                        android:textSize="23dp"
                        android:textStyle="bold"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginTop="15dp"
                />

                <RadioGroup
                        android:id="@+id/select_edit_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@id/text_edit_label_gender">

                    <RadioButton
                            android:id="@+id/radioButton_male"
                            android:text="@string/edit_account_label_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                    />

                    <RadioButton
                            android:id="@+id/radioButton_female"
                            android:text="@string/edit_account_label_female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                    />
                </RadioGroup>


                <LinearLayout
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@id/select_edit_gender"
                        android:layout_marginTop="40dp"
                        android:layout_height="wrap_content">

                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_save_black_24dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="20dp"
                    />

                    <Button
                            android:id="@+id/buttonSave"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="25dp"
                            android:textStyle="bold"
                            android:text="@string/edit_account_label_save"
                            android:layout_marginStart="15dp"
                    />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>